deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
      - name: edge-service
        image: ghcr.io/zzzang12-cns/edge-service
        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 5" ]
        ports:
        - containerPort: 9000
